--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,9 @@ html {
     }
     &.nowrap {
       white-space: nowrap;
+      @include tablet {
+        white-space: initial;
+      }
     }
     &.bold {
       font-weight: bold;
@@ -53,14 +56,20 @@ html {
   .wrap-container {
     max-width: 1100px;
     margin: 0 auto;
+
     //HEADER IMAGE
     .header-image {
       width: 100%;
+      margin: 0 auto;
       margin-bottom: 60px;
+      @include phone {
+        margin-bottom: 1em;
+      }
     }
     //INTRO SECTION
     .intro-section {
       position: relative;
+      width: 100%;
       #miss-out {
         position: absolute;
         display: block;
@@ -69,6 +78,9 @@ html {
         left: 50%;
         width: 130px;
         transform: translateX(-50%);
+        @include phone {
+          display: none;
+        }
       }
       .intro-section-wrapper {
         color: white;
@@ -78,6 +90,10 @@ html {
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
+        @include phone {
+          flex-flow: column nowrap;
+          justify-content: flex-start;
+        }
 
         .intro-section-job {
           clip-path: polygon(0 0, 100% 0, 100% 90%, 0 90%);
@@ -87,9 +103,17 @@ html {
           padding: 3em;
           padding-bottom: 5em;
           height: 98%;
+          @include phone {
+            clip-path: none;
+            padding: 2em;
+            text-align: center;
+          }
           .job-text {
             font-size: 1.56rem;
             width: 90%;
+            @include phone {
+              width: 100%;
+            }
           }
           .discover-jobs {
             display: inline-block;
@@ -122,8 +146,9 @@ html {
           transition: all 0.3s ease;
           cursor: pointer;
 
-          //   &:hover {
-          //   }
+          @include phone {
+            display: none;
+          }
           .why-join {
             font-size: 2rem;
             position: relative;
@@ -155,11 +180,15 @@ html {
 
     //INFOGRAPHIC
     .infographic-container {
+      //   display: none !important;
       margin: 10vh 0;
       display: grid;
       //   grid-template: repeat(3, #{"max(#{533px}, #{46vh})"}) / repeat(2, 533px);
-      grid-template: repeat(3, 533px) / repeat(2, 533px);
-      grid-gap: 34px;
+      grid-template: repeat(3, 534px) / repeat(2, 534px);
+      grid-gap: 32px;
+      @include tablet {
+        grid-template: repeat(3, auto) / repeat(2, 1fr);
+      }
 
       .infographic-box {
         // background-color: $delGreen;
@@ -284,11 +313,15 @@ html {
 
     //JOB DESCRIPTION
     .job-description-wrapper {
+      //   display: none !important;
       margin-top: 10vh;
       position: relative;
       background-color: $darkGrey;
       color: white;
       padding: 4em;
+      @include phone {
+        padding: 4em 2em;
+      }
       #job-description {
         position: absolute;
         display: block;
@@ -302,7 +335,10 @@ html {
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
-
+        @include phone {
+          flex-flow: column nowrap;
+          justify-content: flex-start;
+        }
         .job-description-paragraph {
           font-size: 1rem;
           line-height: 1.5;
@@ -324,6 +360,10 @@ html {
           }
           &:nth-child(2) {
             margin-left: 5em;
+            @include phone {
+              margin-left: auto;
+              margin-bottom: auto;
+            }
           }
         }
       }
@@ -331,6 +371,7 @@ html {
 
     //JOB CTA SECTION
     .job-cta-wrapper {
+      //   display: none !important;
       display: flex;
       flex-flow: column nowrap;
       width: 100%;
@@ -348,25 +389,39 @@ html {
         color: white;
 
         transition: all 0.3s ease;
-
+        @include phone {
+          flex-flow: column nowrap;
+          justify-content: center;
+          align-items: center;
+          padding: 2em;
+        }
         &:hover {
           background-color: $darkGreen;
         }
 
         .job-title {
           font-weight: normal;
+          @include tablet {
+            margin-right: 1em;
+          }
+          @include phone {
+            margin-right: 0;
+          }
         }
         .job-link {
           display: inline-block;
           font-size: 1.2rem;
           padding: 0.6em 1.2em;
-          margin-top: 1em;
           background: none;
           border: 2px solid white;
           transition: all 0.3s ease;
           width: 30%;
           text-align: center;
           font-weight: bold;
+          @include phone {
+            margin-top: 1.5em;
+            width: 70%;
+          }
           &:hover {
             background-color: white;
             color: $delGreen;
@@ -377,6 +432,7 @@ html {
 
     //FOLLOW US SECTION
     .follow-us-section {
+      //   display: none !important;
       margin: 5rem 0;
       .social-title {
         font-size: 1.3rem;
