--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ html {
     right: 1em;
     left: auto;
     bottom: auto;
+    display: none;
   }
 }
 
@@ -459,6 +460,7 @@ html {
   background-color: #171717;
   color: white;
   padding: 4em;
+  padding-top: 4.5em;
 }
 
 @media (max-width: 766px) {
@@ -495,9 +497,9 @@ html {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 @media (max-width: 766px) {
@@ -519,7 +521,6 @@ html {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-bottom: 2em;
 }
 
 .radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph p,
@@ -561,6 +562,22 @@ html {
           flex-flow: column nowrap;
   width: 100%;
   position: relative;
+}
+
+.radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text {
+  max-width: 70%;
+  color: white;
+  text-align: left;
+  font-weight: 300;
+  font-size: 1.4rem;
+  line-height: 1.3;
+  padding: 2em;
+  padding-left: 1em;
+}
+
+.radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text span {
+  font-size: 2.8rem;
+  display: block;
 }
 
 .radc-2021-wrapper .wrap-container .job-cta-wrapper .job {
