--- a/style.scss
+++ b/style.scss
@@ -264,6 +264,7 @@ html {
             right: 1em;
             left: auto;
             bottom: auto;
+            display: none;
           }
         }
         &:not(.career) {
@@ -348,6 +349,7 @@ html {
       background-color: $darkGrey;
       color: white;
       padding: 4em;
+      padding-top: 4.5em;
       @include phone {
         padding: 4em 1em;
       }
@@ -367,7 +369,7 @@ html {
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         @include phone {
           flex-flow: column nowrap;
           justify-content: flex-start;
@@ -377,7 +379,7 @@ html {
           line-height: 1.5;
           font-weight: normal;
           flex: 1;
-          margin-bottom: 2em;
+          // margin-bottom: 2em;
           p,
           ul {
             margin-bottom: 10px;
@@ -409,6 +411,21 @@ html {
       flex-flow: column nowrap;
       width: 100%;
       position: relative;
+      .jobs-intro-text {
+        max-width: 70%;
+        color: white;
+        text-align: left;
+        font-weight: 300;
+        font-size: 1.4rem;
+        line-height: 1.3;
+
+        padding: 2em;
+        padding-left: 1em;
+        span {
+          font-size: 2.8rem;
+          display: block;
+        }
+      }
       .job {
         flex: 1;
         display: flex;
