--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,16 @@ html {
   display: block;
 }
 
+@media (max-width: 766px) {
+  .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text {
+    padding: 1em;
+    width: 100%;
+  }
+  .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text span {
+    font-size: 2.2rem;
+  }
+}
+
 .radc-2021-wrapper .wrap-container .job-cta-wrapper .job {
   -webkit-box-flex: 1;
       -ms-flex: 1;
