--- a/style.scss
+++ b/style.scss
@@ -425,6 +425,13 @@ html {
           font-size: 2.8rem;
           display: block;
         }
+        @include phone {
+          padding: 1em;
+          width: 100%;
+          span {
+            font-size: 2.2rem;
+          }
+        }
       }
       .job {
         flex: 1;
