--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  font-size: 18px;
 }
 
 .radc-2021-wrapper {
@@ -280,7 +281,8 @@ html {
 }
 
 .radc-2021-wrapper .wrap-container .infographic-container {
-  margin: 10vh auto;
+  margin: 100px auto;
+  margin-top: 80px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 480px 480px 534px;
@@ -469,7 +471,8 @@ html {
 .radc-2021-wrapper .wrap-container .job-description-wrapper {
   margin-top: 10vh;
   position: relative;
-  background-color: #171717;
+  background-color: black;
+  border: 3px solid #86bc25;
   color: white;
   padding: 4em;
   padding-top: 4.5em;
@@ -478,6 +481,8 @@ html {
 @media (max-width: 766px) {
   .radc-2021-wrapper .wrap-container .job-description-wrapper {
     padding: 4em 1em;
+    margin-left: 1em;
+    margin-right: 1em;
   }
 }
 
@@ -545,12 +550,28 @@ html {
   margin: 0;
 }
 
-.radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph ul {
-  padding-left: 2em;
+.radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #171717;
+  margin-bottom: 0.5em;
+  padding: 1em;
 }
 
-.radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph ul li {
-  list-style-type: disc;
+.radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph ul li .bullet-img {
+  width: 1em;
+  padding-right: 1em;
 }
 
 .radc-2021-wrapper .wrap-container .job-description-wrapper .job-description-content .job-description-paragraph:nth-child(2) {
@@ -574,31 +595,31 @@ html {
           flex-flow: column nowrap;
   width: 100%;
   position: relative;
+  margin-top: 4em;
 }
 
 .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text {
-  max-width: 70%;
-  color: white;
+  background-color: #171717;
+  position: relative;
+  color: #989a9d;
   text-align: left;
   font-weight: 300;
-  font-size: 1.4rem;
+  font-size: 1rem;
   line-height: 1.3;
-  padding: 2em;
-  padding-left: 1em;
+  padding: 3em;
+  padding-right: 12em;
 }
 
-.radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text span {
-  font-size: 2.8rem;
+.radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text .h2-text {
+  font-size: 2.3rem;
+  margin-bottom: 0.8em;
   display: block;
+  color: white;
 }
 
 @media (max-width: 766px) {
   .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text {
-    padding: 1em;
-    width: 100%;
-  }
-  .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text span {
-    font-size: 2.2rem;
+    padding: 2em;
   }
 }
 
@@ -620,11 +641,19 @@ html {
       -ms-flex-align: center;
           align-items: center;
   padding: 2em 4em;
-  margin: 3px 0;
   background-color: #86bc25;
   color: white;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+}
+
+.radc-2021-wrapper .wrap-container .job-cta-wrapper .job:not(:first-child) {
+  margin: 3px 0;
+  margin-top: 0 !important;
+}
+
+.radc-2021-wrapper .wrap-container .job-cta-wrapper .job:first-child {
+  margin-bottom: 3px;
 }
 
 @media (max-width: 766px) {
